# ragy

./: .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: publish.yml
examples/: chroma_example.py  weaviate_example.py
src/ragy/: core.py  ingest.py  rag.py  rawdoc.py  reasoning.py  vector.py
tests/: test_core.py  test_ingest.py  test_rag.py  test_rawdoc.py  test_reasoning.py  test_vector.py
