[build-system]
requires = ["setuptools >= 69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragy"
version = "0.1.9"
description = "A simple RAG (Retrieval-Augmented Generation) framework for Python."
authors = [
    { name = "mvrcoag", email = "leucine_never.0d@icloud.com" },
]
license = { file = "LICENSE" }
keywords = ["RAG", "Retrieval-Augmented Generation", "Python", "Cache", "Vector Databases"]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "chromadb>=1.5.1",
    "openai>=2.24.0",
    "pypdf>=6.8.0",
    "python-dotenv>=1.2.1",
]

[project.urls]
Homepage = "https://github.com/mvrcoag/ragy"
Repository = "https://github.com/mvrcoag/ragy"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
